# libghostty-cpp

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
cmake/: libghostty_cpp-config.cmake.in
example/build_info/: main.cpp
example/focus/: main.cpp
example/ghostling_cpp/: main.cpp
example/key/: main.cpp
example/mouse/: main.cpp
include/libghostty_cpp/: build_info.hpp  bytes.hpp  error.hpp  fmt.hpp  focus.hpp  key.hpp  kitty_graphics.hpp  mouse.hpp  osc.hpp  paste.hpp  render.hpp  screen.hpp  sgr.hpp  style.hpp  sys.hpp  terminal.hpp  vt.hpp
src/: build_info.cpp  error.cpp  fmt.cpp  focus.cpp  ghostty_result.hpp  key.cpp  kitty_graphics.cpp  mouse.cpp  osc.cpp  paste.cpp  render.cpp  result.hpp  screen.cpp  sgr.cpp  style_private.hpp  sys.cpp  vt.cpp
src/c_compat/: internal.h  key.c  key.h  mouse.c  mouse.h  render.c  render.h  style.h  vt.c  vt.h
tests/: key_smoke.cpp  module_smoke.cpp  mouse_smoke.cpp  render_smoke.cpp  vt_callbacks.cpp  vt_grid_ref.cpp  vt_modes.cpp  vt_state.cpp
